# pre-commit-hooks

./: .gitignore  .mirror.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  dict_rewrite.py  list-untracked-files.sh  mirror-auto-msg.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run-codespell.sh  run-mypy.sh  run-spell-check.sh  test.py  test_suite.py  utils.sh  validate-absolute-imports.sh  validate-dbg.sh  validate-merge-conflict.sh  validate-pragma.sh  validate-todo.sh  version-txt-auto-msg.sh
.github/workflows/: lint.yaml  readme-check.yaml  release.yaml  test.yaml  version.yaml
src/: check_merge_conflict.py
tests/absolute-imports-check/: test_absolute.sh  test_custom_folder.sh  test_empty.sh  test_main.sh  test_relative_only.sh  test_tabs.sh
tests/dbg-check/: test_both_issues.sh  test_debug_statements.sh  test_empty.sh  test_expression.sh  test_header_brackets.sh  test_header_quotes.sh  test_import.sh  test_macro.sh  test_multiple_invalid_files.sh  test_multiple_valid_files.sh  test_no_errors.sh  test_statements.sh  test_symbols_and_spaces.sh
tests/dict-rewrite/: test_commented.sh  test_empty.sh  test_errors.sh  test_keywords.sh  test_no_errors.sh  test_write_change.sh  test_write_no_change.sh
tests/format-yaml/: test_invalid.sh  test_invalid_yml.sh  test_valid.sh
tests/merge-conflict/: test_3_way.sh  test_binary.sh  test_empty.sh  test_js_conflict.sh  test_lfs_conflict.sh  test_lfs_no_conflict.sh  test_multiple_conflicts.sh  test_multiple_invalid_files.sh  test_multiple_valid_files.sh  test_rst_conflict.sh  (+2 more)
(+113 files in other folders)
