[project]
name = "Pre-Commit-Hooks"
version = "2.0.2"
requires-python = ">=3.9,<3.15"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
script-files = ["./run-spell-check.sh"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP", "F", "E", "W", "ERA001"]
extend-ignore = ["F811", "E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
