[project]
name = "Pre-Commit-Hooks"
requires-python = ">=3.9,<3.15"
authors = [{name = "George Ogden"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
script-files = ["./run-spell-check.sh"]

[tool.setuptools.dynamic]
version = {file = ["version.txt"]}
